<resources>
    <string name="app_name">你好</string>
    <string name="edit_message">请输入文字e</string>
    <string name="button">按钮</string>
    <string name="button_send">发送</string>
    <string name="button_1">约束布局按钮</string>
    <string name="button_2">布局实战</string>
    <string name="button_3">Activity</string>
    <string name="button_4">fragment片段</string>
    <string name="button_5">recyclerView</string>
    <string name="button_6">Kotlin Coroutines</string>
    <string name="button_7">sharedPreference</string>
    <string name="button_8">SubmitActivity</string>
    <string name="button_9">ViewActivity</string>
    <string name="button_10">NetworkActivity</string>
    <string name="button_sign_up">注册</string>
    <string name="button_login">登陆</string>
    <string name="sign_up_with_e_mail">用E-mail注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="remember_me">记住用户</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="or_connect_with">或用以下方式连接</string>
    <string name="name_1">杰克</string>
    <string name="phone_1">13886376888</string>
    <string name="name_2">迈克</string>
    <string name="phone_2">13886376999</string>
    <string name="lifecycle">生命周期</string>
    <string name="choose_contact_person">选择联系人</string>
    <string name="sp_save_button">保存</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="age">年龄</string>
    <string name="submit">提交</string>
    <string name="retrofit">retrofit</string>
    <string name="archactivity">ArchActivity</string>
</resources>