<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactContentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:gravity="center_horizontal">
        <ImageView
            android:id="@+id/person1"
            android:src="@drawable/person"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:id="@+id/name1"
            android:text="@string/name_1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/person1"
            android:layout_marginLeft="20dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/phone1"
            android:text="@string/phone_1"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/name1"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/name1"
            android:gravity="center"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/person2"
            android:src="@drawable/person"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:id="@+id/name2"
            android:text="@string/name_2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/person2"
            android:layout_marginLeft="20dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/phone2"
            android:text="@string/phone_2"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/name2"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/name2"
            android:gravity="center"/>
    </RelativeLayout>
</LinearLayout>